@@ -1,6 +1,6 @@
 #define RUBY_VERSION "1.9.2"
 #define RUBY_RELEASE_DATE "2010-09-29"
-#define RUBY_PATCHLEVEL 3
+#define RUBY_PATCHLEVEL 4
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 9
